--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Alex Ren</title>
-        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+        <link rel="stylesheet" href="style.css">
     
         <!-- The font is generated from Google Fonts-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
