update home page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Alex Ren Engineering Portfolio</title>
         <meta name="description" content="Alex Ren's engineering portfolio">
-        <link rel="stylesheet" href="main.css">
+        <!--<link rel="stylesheet" href="main.css">-->
         <base href="alexjren.github.io/" target="_blank">
     </head>
 
