--- a/index.html
+++ b/index.html
@@ -1,29 +1,9 @@
-<!doctype html>
-<!-- Alex Ren's engineering portfolio home page -->
-<!-- Last updated by Alex Ren on 07/28/2022 -->
+{% extends "layout.html" %}
 
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Alex Ren Engineering Portfolio</title>
-        <meta name="description" content="Alex Ren's engineering portfolio">
-        <!--<link rel="stylesheet" href="main.css">-->
-        <base href="alexjren.github.io/" target="_blank">
-    </head>
-
-    <body>
-        <section class="header">
-            <nav id="myHeader">
-                <a href="index.html"><img src="images/.png" id="logo"></a>
-                <div class="nav-bar" id="NavBar">
-                    <ul>
-                        <li><a href="index.html">HOME</a></li>
-                    </ul>
-                </div>
-            </nav>
-        </section>
-
-    </body>
-</html>
-
+{% block content %}
+    <div class="sub-header" id="home-page">
+        <div class="text-box-sub">
+            <h1>something</h1>
+        </div>
+    </div>
+{% endblock %}
