--- a/index.html
+++ b/index.html
@@ -1,9 +1,39 @@
-{% extends "layout.html" %}
+<!DOCTYPE html>
+<!-- Main page layout -->
+<!-- Last updated by Alex Ren on 07/28/2022 -->
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Alex Ren Engineering Portfolio</title>
+        <meta name="description" content="Alex Ren's engineering portfolio">
+        <!--<link rel="stylesheet" href="main.css">-->
+    </head>
 
-{% block content %}
-    <div class="sub-header" id="home-page">
-        <div class="text-box-sub">
-            <h1>something</h1>
-        </div>
-    </div>
-{% endblock %}
+    <body>
+        <section class="header">
+            <nav id="myHeader">
+                <a href="index.html"><img src="images/.png" id="logo"></a>
+                <div class="nav-bar" id="NavBar">
+                    <ul>
+                        <li><a href="index.html">HOME</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </section>
+
+        <section class="main container">
+            <div class="sub-header" id="home-page">
+                <div class="text-box-sub">
+                    <h1>something</h1>
+                </div>
+            </div>
+        </section>
+
+        <section class="footer">
+            <div class="icons">
+                <i class="linkedin" aria-hidden="true"></i>
+            </div>
+        </section>
+    </body>
+</html>
