--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Alex Ren Engineering Portfolio</title>
+        <title>Alex Ren's Engineering Portfolio</title>
         <meta name="description" content="Alex Ren's engineering portfolio">
         <!--<link rel="stylesheet" href="main.css">-->
     </head>
@@ -13,13 +13,25 @@
     <body>
         <section class="header">
             <nav id="myHeader">
-                <a href="index.html"><img src="images/.png" id="logo"></a>
+                <a href="index.html" id="Page Name">Alex Ren's Portfolio</a>
                 <div class="nav-bar" id="NavBar">
                     <ul>
                         <li><a href="index.html">HOME</a></li>
+                        <li><a>About Me</a></li>
+                        <li><a>Education</a></li>
+                        <li><a>Projects</a></li>
+                        <li><a>Resume</a></li>
+                        <li><a>Contact</a></li>
                     </ul>
                 </div>
             </nav>
+            <div class="text-box">
+                <h1>Welcome to my personal website!</h1>
+                <h2>My name is Alex Ren. I am a Mechanical Engineering student in
+                    the Johns Hopkins University class of 2024. This website was
+                    created as an online portfolio to showcase the projects I have
+                    worked on. Please enjoy my online portfolio!</h2>
+            </div>
         </section>
 
         <section class="main container">
