Update home page

--- a/index.html
+++ b/index.html
@@ -25,12 +25,19 @@
                     </ul>
                 </div>
             </nav>
-            <div class="text-box">
-                <h1>Welcome to my personal website!</h1>
-                <h2>My name is Alex Ren. I am a Mechanical Engineering student in
-                    the Johns Hopkins University class of 2024. This website was
-                    created as an online portfolio to showcase the projects I have
-                    worked on. Please enjoy my online portfolio!</h2>
+            <div>
+                <div class="text-box">
+                    <h1>Welcome to my personal website!</h1>
+                    <h2>My name is Alex Ren. I am a student in the Johns Hopkins University
+                        class of 2024 majoring in Mechanical Engineering with a focus on
+                        aerospace. This website was created as an online portfolio to showcase 
+                        the projects I have worked on. Please enjoy my online portfolio!</h2>
+                </div>
+                <div class="Profile">
+                    <img src="images/.png" id="profile-img">
+                    <h1>Alex Ren</h1>
+                    <h2>Mechanical Engineering Student</h2>
+                </div>
             </div>
         </section>
 
@@ -43,8 +50,24 @@
         </section>
 
         <section class="footer">
-            <div class="icons">
-                <i class="linkedin" aria-hidden="true"></i>
+            <div class="contact-info">
+                <ul>
+                    <li>
+                        <h1>Phone</h1>
+                        <h2>408-464-5891</h2>
+                    </li>
+                    <li>
+                        <h1>Email</h1>
+                        <h2>aren3@jhu.edu</h2>
+                    </li>
+                    <li>
+                        <h1>Socials</h1>
+                        <div class="icons">
+                            <a href="https://www.linkedin.com/in/alex-ren-54103b1ba/" target="_blank"
+                            rel="noopener noreferrer"><i class="linkedin" aria-hidden="true"></i></a>
+                        </div>
+                    </li>
+                </ul>
             </div>
         </section>
     </body>
