--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <title>Alex Ren's Engineering Portfolio</title>
         <meta name="description" content="Alex Ren's engineering portfolio">
         <!--<link rel="stylesheet" href="main.css">-->
+        <script src="https://kit.fontawesome.com/c8dd9d74ce.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
@@ -16,7 +17,7 @@
                 <a href="index.html" id="Page Name">Alex Ren's Portfolio</a>
                 <div class="nav-bar" id="NavBar">
                     <ul>
-                        <li><a href="index.html">HOME</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a>About Me</a></li>
                         <li><a>Education</a></li>
                         <li><a>Projects</a></li>
@@ -64,7 +65,7 @@
                         <h1>Socials</h1>
                         <div class="icons">
                             <a href="https://www.linkedin.com/in/alex-ren-54103b1ba/" target="_blank"
-                            rel="noopener noreferrer"><i class="linkedin" aria-hidden="true"></i></a>
+                            rel="noopener noreferrer"><i class="fa-brands fa-linkedin-in"></i></a>
                         </div>
                     </li>
                 </ul>
