--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <nav id="myHeader">
                 <a href="index.html" id="Page Name">Alex Ren's Portfolio</a>
                 <div class="nav-bar" id="NavBar">
-                    <ul>
+                    <ul class="nav-bar-list">
                         <li><a href="index.html">Home</a></li>
                         <li><a>About Me</a></li>
                         <li><a>Education</a></li>
@@ -43,16 +43,26 @@
         </section>
 
         <section class="main container">
-            <div class="sub-header" id="home-page">
+            <div class="section-info-container" id="About Me">
                 <div class="text-box-sub">
-                    <h1>something</h1>
+                    <h1>About Me</h1>
+                </div>
+            </div>
+            <div class="section-info-container" id="Education">
+                <div class="text-box-sub">
+                    <h1>Education</h1>
+                </div>
+            </div>
+            <div class="section-info-container" id="Projects">
+                <div class="text-box-sub">
+                    <h1>Projects</h1>
                 </div>
             </div>
         </section>
 
         <section class="footer">
             <div class="contact-info">
-                <ul>
+                <ul class="contact-list">
                     <li>
                         <h1>Phone</h1>
                         <h2>408-464-5891</h2>
