--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- Main page layout -->
 <!-- Last updated by Alex Ren on 07/28/2022 -->
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +14,7 @@
     <body>
         <section class="header">
             <nav id="myHeader">
-                <a href="index.html" id="Page Name">Alex Ren's Portfolio</a>
+                <a href="index.html" id="PageName">Alex Ren's Portfolio</a>
                 <div class="nav-bar" id="NavBar">
                     <ul class="nav-bar-list">
                         <li><a href="index.html">Home</a></li>
@@ -65,18 +65,16 @@
                 <ul class="contact-list">
                     <li>
                         <h1>Phone</h1>
-                        <h2>408-464-5891</h2>
+                        <a>408-464-5891</a>
                     </li>
                     <li>
                         <h1>Email</h1>
-                        <h2>aren3@jhu.edu</h2>
+                        <a>aren3@jhu.edu</a>
                     </li>
                     <li>
                         <h1>Socials</h1>
-                        <div class="icons">
-                            <a href="https://www.linkedin.com/in/alex-ren-54103b1ba/" target="_blank"
+                        <a href="https://www.linkedin.com/in/alex-ren-54103b1ba/" target="_blank"
                             rel="noopener noreferrer"><i class="fa-brands fa-linkedin-in"></i></a>
-                        </div>
                     </li>
                 </ul>
             </div>
