--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
                     </ul>
                 </div>
             </nav>
-            <div>
+        </section>
+
+        <section class="main container">
+            <div class="main-info-container" id="Intro">
                 <div class="text-box">
                     <h1>Welcome to my personal website!</h1>
                     <h2>My name is Alex Ren. I am a student in the Johns Hopkins University
@@ -40,10 +43,7 @@
                     <h2>Mechanical Engineering Student</h2>
                 </div>
             </div>
-        </section>
-
-        <section class="main container">
-            <div class="section-info-container" id="About Me">
+            <div class="section-info-container" id="AboutMe">
                 <div class="text-box-sub">
                     <h1>About Me</h1>
                 </div>
