--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <body>
         <section class="header">
             <nav id="myHeader">
-                <a href="index.html" id="PageName">Alex Ren's Portfolio</a>
+                <div class="logo" id="logo">
+                    <a href="index.html" id="PageName">Alex Ren's Portfolio</a>
+                </div>
                 <div class="nav-bar" id="NavBar">
                     <ul class="nav-bar-list">
                         <li><a href="index.html">Home</a></li>
