update header css

--- a/index.html
+++ b/index.html
@@ -8,27 +8,28 @@
         <title>Alex Ren's Engineering Portfolio</title>
         <meta name="description" content="Alex Ren's engineering portfolio">
         <link rel="stylesheet" href="main.css">
+        <base href="alexjren.github.io/" target="_blank">
         <script src="https://kit.fontawesome.com/c8dd9d74ce.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
-        <section class="header">
-            <nav id="myHeader">
-                <div class="logo" id="logo">
-                    <a href="index.html" id="PageName">Alex Ren's Portfolio</a>
-                </div>
-                <div class="nav-bar" id="NavBar">
-                    <ul class="nav-bar-list">
-                        <li><a href="index.html">Home</a></li>
+        <div id="page-wrapper">
+            <header id="header">
+                <h1 id="logo">
+                    <a href="#" id="PageName">Alex Ren's Portfolio</a>
+                </h1>
+                <nav id="nav">
+                    <ul class="nav-list">
+                        <li><a href="#">Home</a></li>
                         <li><a>About Me</a></li>
                         <li><a>Education</a></li>
                         <li><a>Projects</a></li>
                         <li><a>Resume</a></li>
                         <li><a>Contact</a></li>
                     </ul>
-                </div>
-            </nav>
-        </section>
+                </nav>
+            </header>
+        </div>
 
         <section class="main container">
             <div class="main-info-container" id="Intro">
