--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Alex Ren's Engineering Portfolio</title>
         <meta name="description" content="Alex Ren's engineering portfolio">
         <link rel="stylesheet" href="main.css">
-        <base href="alexjren.github.io/" target="_blank">
+        <base href="alexjren.github.io/" target="_self">
         <script src="https://kit.fontawesome.com/c8dd9d74ce.js" crossorigin="anonymous"></script>
     </head>
 
@@ -29,58 +29,58 @@
                     </ul>
                 </nav>
             </header>
+
+            <section class="main container">
+                <div class="main-info-container" id="Intro">
+                    <div class="text-box">
+                        <h1>Welcome to my personal website!</h1>
+                        <h2>My name is Alex Ren. I am a student in the Johns Hopkins University
+                            class of 2024 majoring in Mechanical Engineering with a focus on
+                            aerospace. This website was created as an online portfolio to showcase 
+                            the projects I have worked on. Please enjoy my online portfolio!</h2>
+                    </div>
+                    <div class="Profile">
+                        <img src="images/.png" id="profile-img">
+                        <h1>Alex Ren</h1>
+                        <h2>Mechanical Engineering Student</h2>
+                    </div>
+                </div>
+                <div class="section-info-container" id="AboutMe">
+                    <div class="text-box-sub">
+                        <h1>About Me</h1>
+                    </div>
+                </div>
+                <div class="section-info-container" id="Education">
+                    <div class="text-box-sub">
+                        <h1>Education</h1>
+                    </div>
+                </div>
+                <div class="section-info-container" id="Projects">
+                    <div class="text-box-sub">
+                        <h1>Projects</h1>
+                    </div>
+                </div>
+            </section>
+    
+            <footer id="footer">
+                <div class="contact-info">
+                    <ul class="contact-list">
+                        <li>
+                            <h1>Phone</h1>
+                            <a>408-464-5891</a>
+                        </li>
+                        <li>
+                            <h1>Email</h1>
+                            <a>aren3@jhu.edu</a>
+                        </li>
+                        <li>
+                            <h1>Socials</h1>
+                            <a href="https://www.linkedin.com/in/alex-ren-54103b1ba/" target="_blank"
+                                rel="noopener noreferrer"><i class="fa-brands fa-linkedin-in"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </footer>
         </div>
-
-        <section class="main container">
-            <div class="main-info-container" id="Intro">
-                <div class="text-box">
-                    <h1>Welcome to my personal website!</h1>
-                    <h2>My name is Alex Ren. I am a student in the Johns Hopkins University
-                        class of 2024 majoring in Mechanical Engineering with a focus on
-                        aerospace. This website was created as an online portfolio to showcase 
-                        the projects I have worked on. Please enjoy my online portfolio!</h2>
-                </div>
-                <div class="Profile">
-                    <img src="images/.png" id="profile-img">
-                    <h1>Alex Ren</h1>
-                    <h2>Mechanical Engineering Student</h2>
-                </div>
-            </div>
-            <div class="section-info-container" id="AboutMe">
-                <div class="text-box-sub">
-                    <h1>About Me</h1>
-                </div>
-            </div>
-            <div class="section-info-container" id="Education">
-                <div class="text-box-sub">
-                    <h1>Education</h1>
-                </div>
-            </div>
-            <div class="section-info-container" id="Projects">
-                <div class="text-box-sub">
-                    <h1>Projects</h1>
-                </div>
-            </div>
-        </section>
-
-        <section class="footer">
-            <div class="contact-info">
-                <ul class="contact-list">
-                    <li>
-                        <h1>Phone</h1>
-                        <a>408-464-5891</a>
-                    </li>
-                    <li>
-                        <h1>Email</h1>
-                        <a>aren3@jhu.edu</a>
-                    </li>
-                    <li>
-                        <h1>Socials</h1>
-                        <a href="https://www.linkedin.com/in/alex-ren-54103b1ba/" target="_blank"
-                            rel="noopener noreferrer"><i class="fa-brands fa-linkedin-in"></i></a>
-                    </li>
-                </ul>
-            </div>
-        </section>
     </body>
 </html>
