--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             the projects I have worked on. Please enjoy my online portfolio!</h2>
                     </div>
                     <div class="Profile">
-                        <img src="images/.png" id="profile-img">
+                        <img src="images/roster_photo.png" id="profile-img">
                         <h1>Alex Ren</h1>
                         <h2>Mechanical Engineering Student</h2>
                     </div>
