--- a/index.html
+++ b/index.html
@@ -75,8 +75,12 @@
                         </li>
                         <li>
                             <h1>Socials</h1>
-                            <a href="https://www.linkedin.com/in/alex-ren-54103b1ba/" target="_blank"
-                                rel="noopener noreferrer"><i class="fa-brands fa-linkedin-in"></i></a>
+                            <ul class="socials">
+                                <li>
+                                    <a href="https://www.linkedin.com/in/alex-ren-54103b1ba/" target="_blank"
+                                        rel="noopener noreferrer"><i class="fa-brands fa-linkedin-in"></i></a>
+                                </li>
+                            </ul>
                         </li>
                     </ul>
                 </div>
