edit footer css

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             <a>aren3@jhu.edu</a>
                         </li>
                         <li>
-                            <h1>Socials</h1>
+                            <h1>Follow</h1>
                             <ul class="socials">
                                 <li>
                                     <a href="https://www.linkedin.com/in/alex-ren-54103b1ba/" target="_blank"
