update footer css and begin main content css

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 </nav>
             </header>
 
-            <section class="main container">
-                <div class="main-info-container" id="Intro">
+            <div class="main-container">
+                <section class="main-header-container" id="Intro">
                     <div class="text-box">
                         <h1>Welcome to my personal website!</h1>
                         <h2>My name is Alex Ren. I am a student in the Johns Hopkins University
@@ -44,23 +44,23 @@
                         <h1>Alex Ren</h1>
                         <h2>Mechanical Engineering Student</h2>
                     </div>
-                </div>
-                <div class="section-info-container" id="AboutMe">
+                </section>
+                <section class="section-info-container" id="AboutMe">
                     <div class="text-box-sub">
                         <h1>About Me</h1>
                     </div>
-                </div>
-                <div class="section-info-container" id="Education">
+                </section>
+                <section class="section-info-container" id="Education">
                     <div class="text-box-sub">
                         <h1>Education</h1>
                     </div>
-                </div>
-                <div class="section-info-container" id="Projects">
+                </section>
+                <section class="section-info-container" id="Projects">
                     <div class="text-box-sub">
                         <h1>Projects</h1>
                     </div>
-                </div>
-            </section>
+                </section>
+            </div>
     
             <footer id="footer">
                 <div class="contact-info">
