update content css

--- a/index.html
+++ b/index.html
@@ -31,18 +31,20 @@
             </header>
 
             <div class="main-container">
-                <section class="main-header-container" id="Intro">
-                    <div class="text-box">
-                        <h1>Welcome to my personal website!</h1>
-                        <h2>My name is Alex Ren. I am a student in the Johns Hopkins University
-                            class of 2024 majoring in Mechanical Engineering with a focus on
-                            aerospace. This website was created as an online portfolio to showcase 
-                            the projects I have worked on. Please enjoy my online portfolio!</h2>
-                    </div>
-                    <div class="Profile">
-                        <img src="images/roster_photo.png" id="profile-img">
-                        <h1>Alex Ren</h1>
-                        <h2>Mechanical Engineering Student</h2>
+                <section class="section-info-container" id="Intro">
+                    <div class="home-header-content">
+                        <div class="text-box">
+                            <h1>Welcome to my personal website!</h1>
+                            <h2>My name is Alex Ren. I am a student in the Johns Hopkins University
+                                class of 2024 majoring in Mechanical Engineering with a focus on
+                                aerospace. This website was created as an online portfolio to showcase 
+                                the projects I have worked on. Please enjoy my online portfolio!</h2>
+                        </div>
+                        <div class="Profile">
+                            <img src="images/roster_photo.png" id="profile-img">
+                            <h1>Alex Ren</h1>
+                            <h2>Mechanical Engineering Student</h2>
+                        </div>
                     </div>
                 </section>
                 <section class="section-info-container" id="AboutMe">
