update content css

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="main-container">
                 <section class="section-info-container" id="Intro">
                     <div class="home-header-content">
-                        <div class="text-box">
+                        <div class="intro" id="text">
                             <h1>Welcome to my personal website!</h1>
                             <hr>
                             <h2>My name is Alex Ren. I am a student in the Johns Hopkins University
@@ -41,7 +41,7 @@
                                 aerospace. This website was created as an online portfolio to showcase 
                                 the projects I have worked on. Please enjoy my online portfolio!</h2>
                         </div>
-                        <div class="Profile">
+                        <div class="intro" id="profile">
                             <img src="images/roster_photo.png" id="profile-img">
                         </div>
                     </div>
