--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             <h1>Follow</h1>
                             <ul class="socials">
                                 <li>
-                                    <a href="https://www.linkedin.com/in/alex-ren-54103b1ba/" target="_blank"
+                                    <a href="https://www.linkedin.com/public-profile/settings?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_self_edit_contact-info%3BtMLqGqXMTKyujCK4CXozFg%3D%3D" target="_blank"
                                         rel="noopener noreferrer"><i class="fa-brands fa-linkedin-in"></i></a>
                                 </li>
                             </ul>
