fixed main container css

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                 the projects I have worked on. Please enjoy my online portfolio!</h2>
                         </div>
                         <div class="intro" id="profile">
-                            <img src="images/roster_photo.jpg" id="profile-img">
+                            <img src="images/roster_photo.png" alt="Image failed to load" id="profile-img">
                         </div>
                     </div>
                 </section>
