--- a/layout.html
+++ b/layout.html
@@ -8,7 +8,7 @@
         <title>Alex Ren's Engineering Portfolio</title>
         <meta name="description" content="Alex Ren's engineering portfolio">
         <link rel="stylesheet" href="main.css">
-        <!--<base href="alexjren.github.io/" target="_self">-->
+        <base href="alexjren.github.io/" target="_self">
         <script src="https://kit.fontawesome.com/c8dd9d74ce.js" crossorigin="anonymous"></script>
     </head>
 
@@ -31,36 +31,8 @@
             </header>
 
             <div class="main-container">
-                <section class="section-info-container" id="Intro">
-                    <div class="home-header-content">
-                        <div id="text">
-                            <div id="text-content">
-                                <h1>Welcome to my personal website!</h1>
-                                <hr>
-                                <h2>My name is Alex Ren. I am a student in the Johns Hopkins University
-                                    class <br> of 2024 majoring in Mechanical Engineering with a focus on
-                                    aerospace. <br>This website was created as an online portfolio to showcase 
-                                    the projects I <br>have worked on. Please enjoy my online portfolio!</h2>
-                            </div>
-                        </div>
-                        <img src="images/roster_photo.png" alt="Image failed to load" id="profile-img">
-                    </div>
-                </section>
-                <section class="section-info-container" id="AboutMe">
-                    <div class="text-box-sub">
-                        <h1>About Me</h1>
-                    </div>
-                </section>
-                <section class="section-info-container" id="Education">
-                    <div class="text-box-sub">
-                        <h1>Education</h1>
-                    </div>
-                </section>
-                <section class="section-info-container" id="Projects">
-                    <div class="text-box-sub">
-                        <h1>Projects</h1>
-                    </div>
-                </section>
+                {% block content %}
+                {% endblock %}
             </div>
     
             <footer id="footer">
