--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Portfolio home page -->
+<!-- Portfolio education page -->
 <!-- Last updated by Alex Ren on 07/30/2022 -->
 <html lang="en">
     <head>
@@ -8,6 +8,7 @@
         <title>Alex Ren's Engineering Portfolio</title>
         <meta name="description" content="Alex Ren's engineering portfolio">
         <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="education.css">
         <!--<base href="alexjren.github.io/" target="_self">-->
         <script src="https://kit.fontawesome.com/c8dd9d74ce.js" crossorigin="anonymous"></script>
     </head>
@@ -30,9 +31,8 @@
                 </nav>
             </header>
 
-
             <div class="main-container">
-                <section class="section-info-container" id="Intro">
+                <section class="section-info-container" id="title-container">
                     <div class="header-content">
                         <div id="text">
                             <div id="text-content">
@@ -45,21 +45,6 @@
                             </div>
                         </div>
                         <img src="images/roster_photo.png" alt="Image failed to load" id="profile-img">
-                    </div>
-                </section>
-                <section class="section-info-container" id="AboutMe">
-                    <div class="text-box-sub">
-                        <h1>About Me</h1>
-                    </div>
-                </section>
-                <section class="section-info-container" id="Education">
-                    <div class="text-box-sub">
-                        <h1>Education</h1>
-                    </div>
-                </section>
-                <section class="section-info-container" id="Projects">
-                    <div class="text-box-sub">
-                        <h1>Projects</h1>
                     </div>
                 </section>
             </div>
