generalize some css

--- a/education.html
+++ b/education.html
@@ -34,9 +34,9 @@
             <div class="main-container">
                 <section class="section-info-container" id="title-container">
                     <div class="header-content">
-                        <div id="text">
+                        <div id="education-text">
                             <div id="text-content">
-                                <h1>Welcome to my personal website!</h1>
+                                <h1>Education</h1>
                                 <hr>
                                 <h2>My name is Alex Ren. I am a student in the Johns Hopkins University
                                     class <br> of 2024 majoring in Mechanical Engineering with a focus on
@@ -44,7 +44,6 @@
                                     the projects I <br>have worked on. Please enjoy my online portfolio!</h2>
                             </div>
                         </div>
-                        <img src="images/roster_photo.png" alt="Image failed to load" id="profile-img">
                     </div>
                 </section>
             </div>
