--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="main-container">
                 <section class="section-info-container" id="Intro">
                     <div class="header-content">
-                        <div id="text">
+                        <div id="home-text">
                             <div id="text-content">
                                 <h1>Welcome to my personal website!</h1>
                                 <hr>
