update other page templates

--- a/education.html
+++ b/education.html
@@ -32,20 +32,27 @@
             </header>
 
             <div class="main-container">
-                <section class="section-info-container" id="title-container">
+                <section class="section-info-container title-container" id="education">
                     <div class="header-content">
                         <div id="education-text">
                             <div id="text-content">
                                 <h1>Education</h1>
                                 <hr>
-                                <h2>My name is Alex Ren. I am a student in the Johns Hopkins University
-                                    class <br> of 2024 majoring in Mechanical Engineering with a focus on
-                                    aerospace. <br>This website was created as an online portfolio to showcase 
-                                    the projects I <br>have worked on. Please enjoy my online portfolio!</h2>
+                                <h2>My academic history and details, such as relevant courses and honors.</h2>
                             </div>
                         </div>
                     </div>
                 </section>
+                <div class="main-content">
+                    <div class="left-content">
+                        <div class="info-snippet" id="about-me">
+                            About Me
+                        </div>
+                    </div>
+                    <div class="right-content">
+                        asdsadasd
+                    </div>
+                </div>
             </div>
     
             <footer id="footer">
