--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 
             <div class="main-container">
-                <section class="section-info-container" id="Intro">
+                <section class="section-info-container title-container" id="intro">
                     <div class="header-content">
                         <div id="home-text">
                             <div id="text-content">
@@ -47,21 +47,23 @@
                         <img src="images/roster_photo.png" alt="Image failed to load" id="profile-img">
                     </div>
                 </section>
-                <section class="section-info-container" id="AboutMe">
-                    <div class="text-box-sub">
-                        <h1>About Me</h1>
-                    </div>
-                </section>
-                <section class="section-info-container" id="Education">
-                    <div class="text-box-sub">
-                        <h1>Education</h1>
-                    </div>
-                </section>
-                <section class="section-info-container" id="Projects">
-                    <div class="text-box-sub">
-                        <h1>Projects</h1>
-                    </div>
-                </section>
+                <div class="main-content">
+                    <section class="section-info-container" id="AboutMe">
+                        <div class="text-box-sub">
+                            <h1>About Me</h1>
+                        </div>
+                    </section>
+                    <section class="section-info-container" id="Education">
+                        <div class="text-box-sub">
+                            <h1>Education</h1>
+                        </div>
+                    </section>
+                    <section class="section-info-container" id="Projects">
+                        <div class="text-box-sub">
+                            <h1>Projects</h1>
+                        </div>
+                    </section>
+                </div>
             </div>
     
             <footer id="footer">
