added info snippets to template

--- a/education.html
+++ b/education.html
@@ -38,7 +38,8 @@
                             <div id="text-content">
                                 <h1>Education</h1>
                                 <hr>
-                                <h2>My academic history and details, such as relevant courses and honors.</h2>
+                                <h2>My academic history and details, such as relevant 
+                                    courses and honors.</h2>
                             </div>
                         </div>
                     </div>
@@ -46,7 +47,19 @@
                 <div class="main-content">
                     <div class="left-content">
                         <div class="info-snippet" id="about-me">
-                            About Me
+                            <img>
+                            <h1>About Me</h1>
+                            <p>I am constantly working to better myself as an engineer 
+                                and as a person both in and out of classes.</p>
+                            <a href="about_me.html" class="learn-more">Learn More</a>
+                        </div>
+                        <hr>
+                        <div class="info-snippet" id="projects">
+                            <img>
+                            <h1>Projects</h1>
+                            <p>Between courses and work experience, I have had the 
+                                opportunity to work on many projects.</p>
+                            <a href="projects.html" class="learn-more">Learn More</a>
                         </div>
                     </div>
                     <div class="right-content">
