updated education page info

--- a/education.html
+++ b/education.html
@@ -38,7 +38,7 @@
                             <div id="text-content">
                                 <h1>Education</h1>
                                 <hr>
-                                <h2>My academic history and details, such as relevant 
+                                <h2>My academic history and details, such as 
                                     courses and honors.</h2>
                             </div>
                         </div>
@@ -63,7 +63,79 @@
                         </div>
                     </div>
                     <div class="right-content">
-                        asdsadasd
+                        <div id="undergrad">
+                            <img>
+                            <h1>Johns Hopkins University (Undergraduate)</h1>
+                            <p> I am currently a rising junior studying Mechanical
+                                Engineering at Johns Hopkins University. A list of
+                                all my courses sorted by year is available below,
+                                with engineering courses listed first. My full unofficial
+                                transcript so far is available <a href=".pdf">here</a>. </p>
+                            <p> In addition to my coursework, I also participated in the
+                                Astrojays Rocketry Club at JHU and have been elected as
+                                Propulsion Lead for the 2022-23 school year.</p>
+                            <h2>Academic Honors</h2>
+                            <ul>
+                                <li>Dean's List Fall 2020, Fall 2021, Spring 2022</li>
+                                <li>2022 CSCAA Scholar All-American (2nd Team)</li>
+                            </ul>
+                            <h2>Fall 2022 Courses (Current)</h2>
+                            <ul>
+                                <li>(EN.530.254) Manufacturing Engineering</li>
+                                <li>(EN.530.327) Introduction to Fluid Mechanics</li>
+                                <li>(EN.530.329) Introduction to Fluid Mechanics Laboratory</li>
+                                <li>(EN.530.352) Materials Selection</li>
+                                <li>(AS.180.301) Microeconomic Theory</li>
+                            </ul>
+                            <h2>Spring 2022 Courses</h2>
+                            <ul>
+                                <li>(EN.530.202) Mechanical Engineering Dynamics</li>
+                                <li>(EN.530.212) MechE Dynamics Laboratory</li>
+                                <li>(EN.530.215) Mechanics-Based Design</li>
+                                <li>(EN.530.216) Mechanics-Based Design Laboratory</li>
+                                <li>(EN.530.241) Electronics & Instrumentation</li>
+                                <li>(EN.530.243) Electronics and Instrumentation Laboratory</li>
+                                <li>(EN.500.114) Gateway Computing: Matlab</li>
+                            </ul>
+                            <h2>Fall 2021 Courses</h2>
+                            <ul>
+                                <li>(EN.530.231) Mechanical Engineering Thermodynamics</li>
+                                <li>(EN.530.232) Mechanical Engineering Thermodynamics Laboratory</li>
+                                <li>(EN.560.201) Statics & Mechanics of Materials</li>
+                                <li>(EN.560.211) Statics and Mechanics of Materials Laboratory</li>
+                                <li>(EN.553.310) Probability & Statistics for the Physical Sciences & Engineering</li>
+                                <li>(AS.173.112) General Physics Laboratory II</li>
+                                <li>(AS.180.244) Market Design</li>
+                            </ul>
+                            <h2>Spring 2021 Courses</h2>
+                            <ul>
+                                <li>(EN.530.124) Intro to Mechanics II</li>
+                                <li>(EN.530.108) MechE Undergraduate Seminar II</li>
+                                <li>(EN.530.116) MechE Freshman Lab II</li>
+                                <li>(AS.110.302) Differential Equations and Applications</li>
+                                <li>(AS.180.102) Elements of Microeconomics</li>
+                                <li>(AS.220.105) Introduction to Fiction & Poetry I</li>
+                            </ul>
+                            <h2>Fall 2020 Courses</h2>
+                            <ul>
+                                <li>(EN.530.111) Intro to MechE Design and CAD</li>
+                                <li>(EN.530.107) MechE Undergraduate Seminar I</li>
+                                <li>(EN.530.115) MechE Freshman Lab I</li>
+                                <li>(AS.110.212) Honors Linear Algebra</li>
+                                <li>(AS.150.136) Philosophy & Science: An Introduction to Both</li>
+                                <li>(AS.180.101) Elements of Macroeconomics</li>
+                            </ul>
+                        </div>
+                        <div id="highschool">
+                            <img>
+                            <h1>Foothill High School</h1>
+                            <p> I graduated from Foothill High School with a 4.4/4.0 GPA
+                                in Spring of 2020. Some of my honors are listed below.</p>
+                            <ul>
+                                <li>Nationl Merit Scholarship Finalist</li>
+                                <li>AP Scholar with Distinction</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
